# benchmax

./: .env.example  .gitignore  .python-version  README.md  pyproject.toml  pytest.ini  test.py  test.yml  utils.py
adapters/: verifiers.py  verifiers_adapters.py  verifiers_example_script.py
adapters/verifiers/: verifiers_adapters.py
adapters/verl/: sandbox_tool.py  tool_config  tool_registry.py
benchmax/adapters/skyrl/: benchmax_data_process.py  skyrl_adapters.py
benchmax/adapters/verifiers/: verifiers_adapters.py
benchmax/custom_mcp/: salesforce_mcp.py
benchmax/envs/: base_env.py  local_mcp_env.py  remote_mcp_server.py  remote_skypilot_mcp_server.py  types.py
benchmax/envs/braintrust/: .gitignore  README.md  braintrust_env.py  braintrust_utils.py
benchmax/envs/crm/: crm_env.py  salesforce_mcp.py
benchmax/envs/excel/: excel_code_runner_mcp.py  excel_env.py  excel_utils.py
benchmax/envs/fast_apply/: fast_apply_env.py  utils.py
benchmax/envs/math/: math_env.py
benchmax/envs/remote_host/: base_host.py  skypilot.py
benchmax/envs/skypilot/: skypilot_fastmcp.yaml
benchmax/envs/wikipedia/: wiki_env.py
custom_mcp/: excel_code_runner_mcp.py
envs/: base_env.py  base_sandbox.py  base_sandbox_1.py  local_mcp_env.py  local_mcp_sandbox.py  mcp_sandbox.py  types.py
envs/excel/: excel_env.py  excel_sandbox.py  excel_utils.py
envs/math/: math_env.py  math_sandbox.py
envs/wikipedia/: utils.py  wiki_env.py  wiki_sandbox.py
examples/skyrl/: README.md  benchmax_excel.py  benchmax_math.py  run_benchmax_excel.sh  run_benchmax_math.sh
examples/verifiers/: README.md  verifiers_braintrust_example.py
examples/verl/: README.md  run_qwen2.5-3b_benchmax_math.sh
mcp_utils/: mcp.json  mcp_launcher.py
prompts/: tools.py
src/benchmax/adapters/: benchmax_wrapper.py
src/benchmax/bundle/: __init__.py  bundler.py  errors.py  loader.py  payload.py  validator.py
src/benchmax/envs/: README.md  base_env.py  how-to-extend-base-env.md  tracking.py  types.py
tests/: conftest.py  test_compare_excel_cells.py  test_excel_code_runner_mcp.py  test_local_mcp_env.py  test_local_mcp_sandbox.py  test_mcp_sandbox.py  test_salesforce_mcp.py  test_tools_prompt.py
tests/adapters/verifiers/: test_skyrl_adapter.py  test_verifiers_adapter.py
tests/envs/: test_local_mcp_env.py
tests/envs/crm/: test_crm_env.py  test_salesforce_mcp.py
tests/envs/excel/: test_excel_code_runner_mcp.py  test_excel_utils.py
tests/envs/fast_apply/: test_utils.py
tests/test_inputs/: test1.xlsx  test1_gt.xlsx  test1_output.xlsx
(+68 files in other folders)
