[tool.poetry]
name = "benchmax"
version = "0.1.0"
description = "Framework-Agnostic RL Environments for LLM Fine-Tuning"
authors = ["cgft.io"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastmcp = "~2.10.0"
verifiers = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
