[tool.poetry]
name = "benchmax"
version = "0.1.0"
description = "Framework-Agnostic RL Environments for LLM Fine-Tuning"
authors = ["cgft.io"]
readme = "README.md"
packages = [
   { include = "benchmax" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Required for all environments
datasets = "~4.0.0"

# Optional shared or env-specific dependencies
fastmcp = { version = "~2.10.0", optional = true }

verl = { git = "https://github.com/yourorg/verl.git", branch = "benchmax-integration", optional = true, name = "verl" }
verifiers = { version = "^0.1.1", optional = true }

openpyxl = { version = "3.1.5", optional = true }
xlwings = { version = "0.33.15", optional = true }

simple-salesforce = { version = ">=1.12.3", optional = true }
python-dateutil = { version = "~2.9.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.extras]
# Independent feature extras
verifiers = ["verifiers"]
verl = ["verl"]

# Environment-specific
excel-linux = ["openpyxl", "fastmcp"]
excel = ["openpyxl", "xlwings", "fastmcp"]
crm = ["simple-salesforce", "python-dateutil", "fastmcp"]
wikipedia = ["fastmcp"]

# Everything
full = [
  "verl",
  "verifiers",
  "openpyxl",
  "xlwings",
  "simple-salesforce",
  "python-dateutil",
  "fastmcp"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
